maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:9: error: illegal start of simple expression
    else gauche;
    ^