maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    var r = random3()
  var t = random2()
  while (!estSurBiscuit) {
    if (!estFaceMur) {
      avance
    }else if (t==0);
    else gauche;
    r=random3();t=random2()
  }
}